--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>Films4U</title>
   <link rel="shortcut icon" href="./assets/carrete-de-pelicula.png" type="carrete">
   <link rel="stylesheet" href="./style.css">
-  <script src="./index.js" defer></script>
+
 </head>
 <body>
   <section class="filter"></section>
-  <section class="peliculas"></section>
+  <section  class="peliculas"></section>
+  <script src="./index.js"></script>
 </body>
 </html>
