--- a/index.html
+++ b/index.html
@@ -9,8 +9,39 @@
 
 </head>
 <body>
+  <header>
+    <div id="titulo-logo-container">
+      <img src="./assets/carrete-de-pelicula.png" alt="" class="logoHeader">
+    <h1>Films4U</h1>
+  </div>
+    <div id="user-login-container">
+    <div id="login-register">
+      <a href="#" class="sign-in" target="_blank">Iniciar sesión</a> 
+        /   
+      <a href="#" class="register" target="_blank">Regístrate</a></div>
+  </div>
+  <div class="hamburger">
+<img src="./assets/barra-de-menus.png" alt="menu-hamburguesa">
+  </div>
+  </header>
+  <div id="sections-container">
   <section class="filter"></section>
   <section  class="peliculas"></section>
+</div>
+  <footer>
+    <div id="faq-condiciones-container">
+    <a href="#" target="_blank">Preguntas más frecuentes</a> |
+    <a href="#" target="_blank">Política de privacidad / condiciones de uso</a> |
+    <a href="#" target="_blank">Configuración de privacidad</a>
+  </div>
+  <div id="rights-container">
+    <p>© 2023-2024 Films4U | Films4U es una página de recomendación de películas y series, y es un medio totalmente independiente cuya principal prioridad es la privacidad y seguridad de los datos de sus usuarios.
+      <br>
+      All Rights Reserved - Todos los derechos reservados
+    </p>
+
+  </div>
+  </footer>
   <script src="./index.js"></script>
 </body>
 </html>
